# deep-researcher

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
lib/: analytics.py  constants.py  crawlers.py  llm.py  log.py  prompts.py  researcher.py  types.py
lib/models/: crawler.py  llm.py
